yopass/ingress/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: httpsredirect
  namespace: tools
spec:
  redirectScheme:
    scheme: https
