yopass/ingress/yopass-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: yopass-http
  namespace: tools
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`yopass.k8s.lenin.nu`)
      kind: Rule
      middlewares:
      - name: httpsredirect
      services:
      - name: yopass-svc
        port: 8080
        namespace: tools
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: yopass-https
#  namespace: tools
#spec:
#  entryPoints:
#    - websecure
#  tls:
#    secretName: 
#  routes:
#    - match: Host(`yopass.k8s.lenin.nu`)
#      kind: Rule
#      services:
#        - name: yopass-svc
#          port: 8080
#          namespace: tools
